# lcnc-a2a

./: .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  pyproject.toml
.agent_docs/: a2a_executor.md  agent_lifecycle.md  agents_dashboard.md  architecture.md  mcp_tools.md  plan_execute_executor.md  react_executor.md  runs_history_ui.md  secrets_bootstrap.md  testing.md
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_agents_keys_runs.py  0003_lifecycle_cascade_tables.py  0004_agent_runs_full_schema.py  0005_app_state.py  0006_provider_api_key_env_var.py  0007_pending_action.py  0008_provider_extra_headers.py
specs/: 2026-04-30_20-06-59-lcnc-a2a-builder.md  BACKLOG.md
specs/archived/: US-002_dashboard_create_keys.md  US-003_lifecycle_edit_delete_state.md
specs/notes/: agent-building-blocks.md
specs/user_stories/: US-001_foundation_login.md  US-005_a2a_endpoint_simple_executor.md  US-007_plan_execute_executor.md  _index.md
specs/user_stories/archived/: US-004_mcp_tool_configuration.md  US-006_react_executor_guardrails.md  US-008_runs_history_trace_ui.md
src/lcnc_a2a/: __init__.py  crypto.py  crypto_machine.py  db.py  deps.py  main.py  settings.py
tests/: conftest.py
tests/e2e/: _a2a_helpers.py  _mcp_http_helpers.py  _pe_helpers.py  _react_helpers.py  test_a2a_auth.py  test_a2a_card.py  test_a2a_input_required.py  test_a2a_lifecycle.py  test_a2a_orphan_runs.py  test_a2a_otel.py  test_a2a_plan_execute.py  test_a2a_react.py  test_a2a_simple.py  test_a2a_tools.py  test_api_keys.py  test_create_agent.py  test_dashboard.py  test_delete_agent.py  test_edit_agent.py  test_login.py  test_mcp_http.py  test_mcp_stdio.py  test_pe_planner.py  test_pe_replan.py  test_pe_substitution.py  test_provider_api_key_sources.py  test_react_embeddings.py  test_react_guardrails.py  test_react_otel.py  test_runs_ui.py  test_secrets_bootstrap.py  test_session.py  test_settings.py  test_sqlite_backend.py  test_state_toggle.py  test_static_assets.py
(+105 files in other folders)
